objects/Feature_Flags__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>MDM_Address_Feature__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MDM Address Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDM_Merge_feature__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MDM Merge feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Pane_Address_Cleansing_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turns on/off melissa cleansing</description>
        <label>Single Pane Address Cleansing Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Pane_Address_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Pane Address Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Pane_CCLU_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Pane CCLU Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Pane_Merge_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Pane Merge Feature</label>
        <type>Checkbox</type>
    </fields>
    <label>Feature Flags</label>
</CustomObject>